--- a/resources/assets/css/auth.css
+++ b/resources/assets/css/auth.css
@@ -95,11 +95,12 @@ body {
 	color: #c96462;
 }
 
-.btn {
+.form-actions .btn {
 	padding: 10px;
 }
 
-.form-actions > a i.fa-fw,
-.form-actions > button i.fa-fw {
-	margin-right: 4px;
+.form-actions a i.fa-fw,
+.form-actions button i.fa-fw {
+	margin-right: 2px;
+	text-align:   left;
 }
