--- a/resources/assets/css/auth.css
+++ b/resources/assets/css/auth.css
@@ -3,6 +3,7 @@ body {
 	background-color: #353535;
 	color:            rgba(255, 255, 255, .5);
 	font-size:        14px;
+	margin-bottom:    0;
 }
 
 .form-control {
