--- a/resources/assets/css/auth.css
+++ b/resources/assets/css/auth.css
@@ -126,9 +126,21 @@ body {
 	text-align: center;
 }
 
+.jumbotron {
+	padding-bottom: 20px;
+	padding-top:    40px;
+}
+
 .jumbotron > .pull-center > h3 {
-	color:         #fff;
-	font-family:   "Montserrat", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size:     18px;
-	margin-bottom: 5px;
+	color:         rgba(255, 255, 255, .90);
+	margin-bottom: 0;
+	text-shadow:   0 0 1px rgba(0, 0, 0, 1);
+	font-size:     36px;
+}
+
+.jumbotron > .pull-center > p.text-warning {
+	font-size:      15px;
+	padding-top:    0;
+	margin-top:     0;
+	padding-bottom: 20px;
 }
